--- a/software.html
+++ b/software.html
@@ -43,7 +43,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://benevolentai.workable.com/j/2043BD8AEF'>BenevolentAI - Jobs: Senior Software Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benevolentai.workable.com/j/2043BD8AEF'>BenevolentAI - Jobs: Senior Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://effectory.recruitee.com/o/senior-software-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://effectory.recruitee.com/o/senior-software-developer'>
       Senior Software Developer - Effectory
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -169,7 +169,7 @@
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lamudi/7f1a641c-df16-4de9-a334-e5644d977712'>Lamudi - Senior Software Developer / PHP Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lamudi/7f1a641c-df16-4de9-a334-e5644d977712'>Lamudi - Senior Software Developer / PHP Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -177,7 +177,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/drweng/jobs/1783586'>Job Application for Software Developer - Data Specialist at DRW </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/drweng/jobs/1783586'>Job Application for Software Developer - Data Specialist at DRW </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -229,7 +229,7 @@
 <p><span class="badge badge-light">Hyderabad</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wmp.referrals.selectminds.com/jobs/big-data-software-developer-covering-maternity-leave-up-to-12-months-fixed-term-contract-613'>Big Data Software Developer - covering maternity leave up to 12 months fixed term contract - Careers at WMP Careers</a></h5> 
+<h5><a href='https://wmp.referrals.selectminds.com/jobs/big-data-software-developer-covering-maternity-leave-up-to-12-months-fixed-term-contract-613'>Big Data Software Developer - covering maternity leave up to 12 months fixed term contract - Careers at WMP Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -296,6 +296,16 @@
 <h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999692385815-software-engineer'>Spry Squared, Inc. Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://activision.referrals.selectminds.com/jobs/software-engineer-automation-treyarch-4022'>Software Engineer-Automation - Treyarch - Activision Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... TEST SOFTWARE ENGINEER. We are seeking a Software Engineer who will 
+contribute to our AAA franchise as a member of our Automation and QA teams.</p>
+<hr/>
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/software-engineering-fall-co-op-32913'>Software Engineering Fall Co-op - Nokia Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>1 day ago ... Nokia is a global leader in the technologies that connect people and things. With 
+state-of-the-art software, hardware and services for any type of network, Nokia?...</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/spireon/job/oKwEafwO'>Spireon Careers - Sr. Software Engineer in Test</a></h5> 
 <p><span class="badge badge-light">Irvine California</span></p>
@@ -385,7 +395,7 @@ Assistant Operations Analyst Sophia Antipolis; Chip Package Codesign Engineer
 <p>Jul 19, 2019 ... Apply online for the job of Software Developer (Microsoft .NET) at INDEV 
 Software SA.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/jobs/1069435'>Embedded Software Developer Co-op - Apply online - Semios - Jobs</a></h5> 
+<h5><a href='https://semios.workable.com/jobs/1069435'>Embedded Software Developer Co-op - Apply online - Semios - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Apply online for the job of Embedded Software Developer Co-op at Semios.</p>
 <hr/>
@@ -407,7 +417,7 @@ PEOPLECERT.</p>
 <p><span class="badge badge-light">Ottawa, Ontario</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlueWireSoftware/743999692086322-java-software-developer'>Blue Wire Software JAVA SOFTWARE DEVELOPER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlueWireSoftware/743999692086322-java-software-developer'>Blue Wire Software JAVA SOFTWARE DEVELOPER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -442,14 +452,6 @@ talented software engineers in implementing, configuring, and customizing our?..
 <hr/>
 <h5><a href='https://boards.greenhouse.io/starry/jobs/4367384002'>Job Application for Principal System Software Engineer (Linux) at Starry</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/starry/jobs/4370392002'>Job Application for Software Engineer, Node.js at Starry</a></h5> 
-<p><span class="badge badge-light">Boston, Massachusetts</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/magnitude/job/orwBafws'>Magnitude Software Careers - Senior C++ & Go Software Developer</a></h5> 
-<p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 
